python/test-data/testTypesCollections4.err
untypy.error.UntypyTypeError
given:    42
expected: value of type str

context: foo(l: list[Callable[[], str]]) -> list[str]
                                  ^^^
declared at: test-data/testTypesCollections4.py:4
  4 |     l.append(lambda: 42) # error
declared at: test-data/testTypesCollections4.py:3
  3 | def foo(l: list[Callable[[], str]]) -> list[str]:
  4 |     l.append(lambda: 42) # error
  5 |     res = []
  6 |     for f in l:
  7 |         res.append(f())
    | ...

caused by: test-data/testTypesCollections4.py:4
  4 |     l.append(lambda: 42) # error
caused by: test-data/testTypesCollections4.py:10
 10 | foo([])
